--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    html {
+      font-family: monospace;
+    }
+  </style>
+</head>
 <body>
 
-what&apos;s up r/programming :)
-
+what&apos;s up r/programming :)<br>
+<br>
 <a href="https://n2d4.com">shameless plug</a>
 
 </body>
